# templates

./: Cargo.toml  Justfile  README.md  cargo-generate.toml
cli/: README.md
cli/template/: Cargo.toml  LICENSE  README.md  build.rs  cargo-generate.toml  dprint.json
cli/template/src/: main.rs
lib/: README.md
lib/template/: Cargo.toml  Justfile
lib/template/examples/: simple.rs
lib/template/src/: lib.rs
web/: README.md
web/template/: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  cargo-generate.toml  post-script.rhai
web/template/assets/css/: styles.css
web/template/src/: helpers.rs  main.rs  metric.rs  router.rs  settings.rs  state.rs
web/template/templates/: csrf.jinja  layout.jinja  validation.jinja
