[package]
name = "{{project-name}}"
version = "0.1.0"
description = "{{project-description}}"
authors = ["{{authors}}"]
license = "ISC"
edition = "2024"

[dependencies]
anyhow = "=1.0.100"
axum = { version = "=0.8.6", features = ["macros"] }
axum-client-ip = "=1.1.3"
axum-messages = "=0.8.0"
axum_csrf = { version = "=0.11.0", features = ["layer"] }
config = { version = "=0.15.19", default-features = false, features = ["toml"] }
metrics = { version = "=0.24.2", default-features = false }
metrics-exporter-prometheus = { version = "=0.17.2", default-features = false }
minijinja = "=2.12.0"
serde = { version = "=1.0.228", features = ["derive"] }
time = "=0.3.44"
tokio = { version = "=1.48.0", features = ["macros", "rt-multi-thread", "signal"] }
tower-http = { version = "=0.6.6", features = ["timeout", "trace", "fs", "request-id"] }
tower-sessions = "=0.14.0"
tracing = "=0.1.41"
tracing-subscriber = { version = "=0.3.20", features = ["env-filter"] }
